@@ -418,6 +418,8 @@ def default_latex_engine(config: Config) -> str:
         return 'platex'
     elif (config.language or '').startswith('zh'):
         return 'xelatex'
+    elif (config.language or '') == 'el':
+        return 'xelatex'
     else:
         return 'pdflatex'
 
