@@ -17,6 +17,7 @@ Bugs fixed
 ----------
 
 * #6641: LaTeX: Undefined control sequence ``\sphinxmaketitle``
+* #6710: LaTeX not well configured for Greek language as main language
 
 Testing
 --------
